--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Installs and updates Project Zomboid server, and workshop mods / collections.",
   "main": "index.js",
   "scripts": {
+    "build": "rollup -c",
+    "watch": "rollup -c -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,16 +26,21 @@
   "funding": "https://ko-fi.com/fmauneko",
   "devDependencies": {
     "@babel/core": "^7.18.13",
+    "@babel/eslint-parser": "^7.18.9",
     "@babel/preset-env": "^7.18.10",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
-    "@rollup/plugin-babel": "^5.3.1",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
-    "husky": "^8.0.1",
-    "rollup": "^2.79.0"
+    "eslint-plugin-jsdoc": "^39.3.6",
+    "husky": "^8.0.1"
+  },
+  "dependencies": {
+    "got": "^12.3.1",
+    "steamcmd-interface": "^4.0.2",
+    "toml": "^3.0.0"
   }
 }
