--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "pzserverinstaller",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Installs and updates Project Zomboid server, and workshop mods / collections.",
-  "main": "index.js",
+  "main": "src/app.mjs",
+  "bin": {
+    "pzserverinstaller": "src/app.mjs"
+  },
   "scripts": {
-    "build": "rollup -c",
-    "watch": "rollup -c -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,9 +26,6 @@
   "homepage": "https://github.com/fmauNeko/PZServerInstaller#readme",
   "funding": "https://ko-fi.com/fmauneko",
   "devDependencies": {
-    "@babel/core": "^7.18.13",
-    "@babel/eslint-parser": "^7.18.9",
-    "@babel/preset-env": "^7.18.10",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "commitizen": "^4.2.5",
