--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pzserverinstaller",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Installs and updates Project Zomboid server, and workshop mods / collections.",
   "main": "src/app.mjs",
   "bin": {
@@ -37,7 +37,9 @@
     "husky": "^8.0.1"
   },
   "dependencies": {
+    "glob": "^8.0.3",
     "got": "^12.3.1",
+    "ini": "^3.0.1",
     "steamcmd-interface": "^4.0.2",
     "toml": "^3.0.0"
   }
