--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pzserverinstaller",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Installs and updates Project Zomboid server, and workshop mods / collections.",
   "main": "src/app.mjs",
   "bin": {
@@ -40,6 +40,7 @@
     "glob": "^8.0.3",
     "got": "^12.3.1",
     "ini-win": "^3.0.3",
+    "rimraf": "^3.0.2",
     "steamcmd-interface": "^4.0.2",
     "toml": "^3.0.0"
   }
